--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,3 +23,11 @@ jobs:
           target: gh-pages
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Update packages
+        uses: r-lib/actions/setup-r-dependencies@v2
+          with:
+            packages:
+              any::knitr
+              any::rmarkdown
+
