--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,6 +21,9 @@ jobs:
         uses: r-lib/actions/setup-r@v2
         with:
           r-version: '4.2.2'
+          packages:
+            any::knitr
+            any::rmarkdown
 
       - name: Render and Publish
         uses: quarto-dev/quarto-actions/publish@v2
