--- a/_quarto.yml
+++ b/_quarto.yml
@@ -4,7 +4,7 @@ project:
 
 website:
   title: "Paneles Flora UAM"
-  favicon: bot_icon.png
+  favicon: materials/bot_icon.png
   sidebar:
     background: primary
     logo: "leaf.png"
